[package]
name = "edc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
walkdir = "2"
